--- a/public/index.html
+++ b/public/index.html
@@ -95,7 +95,7 @@
         
         <button class="fav" data-product-id="64b0...">Add to Favorites</button>
        <button class="buy-now-btn" data-product-id="6881df1690b958f4a4281922" class="buy">Buy Now</button>
-        <button onclick="addToCart('6881df1690b958f4a4281922')">Add to Cart</button>
+        <button onclick="addToCart('6881df1690b958f4a4281922')" class="cart">Add to Cart</button>
 
       </div>
     </div>
@@ -114,7 +114,7 @@
         <!-- <button onclick="addToFavorites('${product.name}')">Add to Favorites</button> -->
          <button class="fav" data-product-id="64b0...">Add to Favorites</button>
        <button class="buy-now-btn" data-product-id="6881e3d890b958f4a4281924" class="buy">Buy Now</button>
-       <button onclick="addToCart('6881e3d890b958f4a4281924')">Add to Cart</button>
+       <button onclick="addToCart('6881e3d890b958f4a4281924')" class="cart">Add to Cart</button>
       </div>
     </div>
 
